--- a/dist.ini
+++ b/dist.ini
@@ -35,7 +35,7 @@ bugtracker.web    = https://rt.cpan.org/Public/Dist/Display.html?Name=Data-Turtl
 [Test::PodSpelling]
 wordlist  = Pod::Wordlist
 spell_cmd = aspell list
-stopwords = foo
+stopwords = se
 
 [GatherDir]
 exclude_filename = LICENSE
