--- a/dist.ini
+++ b/dist.ini
@@ -26,11 +26,7 @@ format = %-5v %{yyyy-MM-dd}d
 [MetaJSON]
 [Test::Synopsis]
 
-[MetaResources]
-repository.web    = https://github.com/ology/Data-Turtle
-repository.type   = git
-bugtracker.mailto = bug-Data-Turtle@rt.cpan.org
-bugtracker.web    = https://rt.cpan.org/Public/Dist/Display.html?Name=Data-Turtle
+[GithubMeta]
 
 [Test::PodSpelling]
 wordlist  = Pod::Wordlist
