--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name             = Data-Turtle
 author           = Gene Boggs <gene@cpan.org>
 license          = Perl_5
 copyright_holder = Gene Boggs
-copyright_year   = 2019
+copyright_year   = 2015-2023
 
 [VersionFromModule]
 [MinimumPerl]
@@ -34,6 +34,8 @@ spell_cmd = aspell list
 stopwords = se
 
 [GatherDir]
+exclude_match = \.png
+exclude_match = \.svg
 [PruneCruft]
 [ManifestSkip]
 [MetaYAML]
